--- a/templates/artists.html
+++ b/templates/artists.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🎀 Groupie Tracker - Artistes Kawaii</title>
+    <title>🎀 Groupie Tracker - Artistes </title>
     <style>
         * {
             margin: 0;
@@ -228,7 +228,7 @@
             <a href="/">🏠 Retour à l'accueil</a>
         </div>
         
-        <h1>🎤 Nos Artistes Kawaii 🎤</h1>
+        <h1>🎤 Nos Artistes 🎤</h1>
         <div class="decoration-line">🌸 💖 🎵 🌟 💕 🎶 🌸</div>
         
         <div class="artists-grid">
@@ -249,7 +249,7 @@
         </div>
 
         <div class="footer">
-            Made with 💕 by vous ! ✨
+            Made with 💕 my Blood ! ✨
         </div>
     </div>
 </body>
